// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a TOC if available 1`] = `
<div
  className="markdown"
>
  <div
    className="markdown-content"
  >
    <Block
      key="h-1"
    >
      <h2
        id="table-of-contents"
        key="h-2"
      >
        Table of Contents
      </h2>
      

      <ul
        key="h-3"
      >
        

        <li
          key="h-4"
        >
          <withChildProps
            href="#lorem-ipsum"
            key="h-5"
          >
            Lorem ipsum
          </withChildProps>
        </li>
        

        <li
          key="h-6"
        >
          

          <p
            key="h-7"
          >
            <withChildProps
              href="#sit-amet"
              key="h-8"
            >
              Sit amet
            </withChildProps>
          </p>
          

          <ul
            key="h-9"
          >
            

            <li
              key="h-10"
            >
              <withChildProps
                href="#maecenas-diam"
                key="h-11"
              >
                Maecenas diam
              </withChildProps>
            </li>
            

            <li
              key="h-12"
            >
              <withChildProps
                href="#integer"
                key="h-13"
              >
                Integer
              </withChildProps>
            </li>
            

          </ul>
          

        </li>
        

        <li
          key="h-14"
        >
          <withChildProps
            href="#nam-blandit"
            key="h-15"
          >
            Nam blandit
          </withChildProps>
        </li>
        

      </ul>
      

      <h2
        id="lorem-ipsum"
        key="h-16"
      >
        Lorem ipsum
      </h2>
      

      <p
        key="h-17"
      >
        Quisque vitae tincidunt felis. Nam blandit risus placerat, efficitur enim ut, pellentesque sem. Mauris non lorem auctor, consequat neque eget, dignissim augue.
      </p>
      

      <h2
        id="sit-amet"
        key="h-18"
      >
        Sit amet
      </h2>
      

      <h3
        id="maecenas-diam"
        key="h-19"
      >
        Maecenas diam
      </h3>
      

      <p
        key="h-20"
      >
        Velit, vestibulum nec ultrices id, mollis eget arcu. Sed dapibus, sapien ut auctor consectetur, mi tortor vestibulum ante, eget dapibus lacus risus.
      </p>
      

      <h3
        id="integer"
        key="h-21"
      >
        Integer
      </h3>
      

      <p
        key="h-22"
      >
        At cursus turpis. Aenean at elit fringilla, porttitor mi eget, dapibus nisi. Donec quis congue odio.
      </p>
      

      <h2
        id="nam-blandit"
        key="h-23"
      >
        Nam blandit
      </h2>
      

      <p
        key="h-24"
      >
        Risus placerat, efficitur enim ut, pellentesque sem. Mauris non lorem auctor, consequat neque eget, dignissim augue.
      </p>
    </Block>
  </div>
</div>
`;

exports[`should render a sticky TOC if available 1`] = `
<div
  className="markdown has-toc"
>
  <div
    className="markdown-content"
  >
    <Block
      key="h-1"
    >
      <h2
        id="lorem-ipsum"
        key="h-2"
      >
        Lorem ipsum
      </h2>
      

      <p
        key="h-3"
      >
        Quisque vitae tincidunt felis. Nam blandit risus placerat, efficitur enim ut, pellentesque sem. Mauris non lorem auctor, consequat neque eget, dignissim augue.
      </p>
      

      <h2
        id="sit-amet"
        key="h-4"
      >
        Sit amet
      </h2>
      

      <h3
        id="maecenas-diam"
        key="h-5"
      >
        Maecenas diam
      </h3>
      

      <p
        key="h-6"
      >
        Velit, vestibulum nec ultrices id, mollis eget arcu. Sed dapibus, sapien ut auctor consectetur, mi tortor vestibulum ante, eget dapibus lacus risus.
      </p>
      

      <h3
        id="integer"
        key="h-7"
      >
        Integer
      </h3>
      

      <p
        key="h-8"
      >
        At cursus turpis. Aenean at elit fringilla, porttitor mi eget, dapibus nisi. Donec quis congue odio.
      </p>
      

      <h2
        id="nam-blandit"
        key="h-9"
      >
        Nam blandit
      </h2>
      

      <p
        key="h-10"
      >
        Risus placerat, efficitur enim ut, pellentesque sem. Mauris non lorem auctor, consequat neque eget, dignissim augue.
      </p>
    </Block>
  </div>
  <DocToc
    content="
## Table of Contents

## Lorem ipsum

Quisque vitae tincidunt felis. Nam blandit risus placerat, efficitur enim ut, pellentesque sem. Mauris non lorem auctor, consequat neque eget, dignissim augue.

## Sit amet

### Maecenas diam

Velit, vestibulum nec ultrices id, mollis eget arcu. Sed dapibus, sapien ut auctor consectetur, mi tortor vestibulum ante, eget dapibus lacus risus.

### Integer

At cursus turpis. Aenean at elit fringilla, porttitor mi eget, dapibus nisi. Donec quis congue odio.

## Nam blandit 

Risus placerat, efficitur enim ut, pellentesque sem. Mauris non lorem auctor, consequat neque eget, dignissim augue.
"
    onAnchorClick={[Function]}
  />
</div>
`;

exports[`should render simple markdown 1`] = `
<div
  className="markdown"
>
  <div
    className="markdown-content"
  >
    <Block
      key="h-1"
    >
      <p
        key="h-2"
      >
        this is 
        <em
          key="h-3"
        >
          bold
        </em>
         text
      </p>
    </Block>
  </div>
</div>
`;

exports[`should render with custom props for links 1`] = `
<withChildProps
  href="#quality-profiles"
  key="h-3"
>
  link
</withChildProps>
`;

exports[`should use custom component for links 1`] = `
<withChildProps
  href="/quality-profiles"
  key="h-3"
>
  link
</withChildProps>
`;
